--- a/notion-sync/.env.example
+++ b/notion-sync/.env.example
@@ -1,7 +1,7 @@
 # Notion API Key
 # Get it from: https://www.notion.so/my-integrations
 NOTION_API_KEY=secret_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-
+CHATGPT_API_KEY=secret_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 # Optional: Output directory (default: ../notion-import)
 # OUTPUT_DIR=../notion-import
 
